--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 node_modules/.DS_Store
 node_modules/
 
-03*/*/solution.js
-04*/*/*solution.js
+03*/**/solution.js
+04*/**/*solution.js
+05*/**/*solution.js
