--- a/12-databases-and-CRUD/giphy-viewer-starter/package.json
+++ b/12-databases-and-CRUD/giphy-viewer-starter/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^5.3.12",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2"
   }
 }
