--- a/14-react-cont/exercise/starter/server/package.json
+++ b/14-react-cont/exercise/starter/server/package.json
@@ -12,8 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
     "mongoose": "^5.0.18",
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
